--- a/squid.conf
+++ b/squid.conf
@@ -1,6 +1,7 @@
 http_port 3128
 
 auth_param basic program /usr/lib/squid3/basic_ncsa_auth /etc/squid3/passwd
+auth_param basic realm proxy
 acl authenticated proxy_auth REQUIRED
 http_access allow authenticated
 
