--- a/squid.conf
+++ b/squid.conf
@@ -3,4 +3,8 @@ http_port 3128
 auth_param basic program /usr/lib/squid3/basic_ncsa_auth /etc/squid3/passwd
 auth_param basic realm proxy
 acl authenticated proxy_auth REQUIRED
+acl localhost src 127.0.0.1/32 ::1
+http_access allow manager localhost
+http_access deny manager
+http_access allow localhost
 http_access allow authenticated
