--- a/squid.conf
+++ b/squid.conf
@@ -1,9 +1,13 @@
 http_port 3128
-
-auth_param basic program /usr/lib/squid3/basic_ncsa_auth /etc/squid3/passwd
-auth_param basic children 5
-auth_param basic realm Squid proxy-caching web server
-auth_param basic credentialsttl 2 hours
-acl authenticated proxy_auth REQUIRED
-acl CONNECT method CONNECT
-http_access allow authenticated
+auth_param basic program /usr/lib/squid3/basic_ncsa_auth /etc/squid3/.passwd
+auth_param basic children 1
+auth_param basic credentialsttl 1 minute
+auth_param basic casesensitive off
+acl auth proxy_auth REQUIRED
+acl localhost src 127.0.0.0/8
+http_access allow auth
+http_access allow localhost
+http_access deny all
+cache deny all
+forwarded_for delete
+request_header_access Via deny all
