--- a/squid.conf
+++ b/squid.conf
@@ -11,3 +11,6 @@ http_access deny all
 cache deny all
 forwarded_for delete
 request_header_access Via deny all
+
+acl ip1 myip 35.199.7.232
+tcp_outgoing_address 35.199.7.232
