--- a/squid.conf
+++ b/squid.conf
@@ -1,18 +1,6 @@
-http_port 3128
+http_port 80
 
-auth_param basic program /usr/lib/squid3/basic_ncsa_auth /etc/squid3/.passwd
-auth_param basic children 1
-auth_param basic credentialsttl 1 minute
-auth_param basic casesensitive off
-
-acl auth proxy_auth REQUIRED
-acl localhost src 127.0.0.0/8
-
-http_access allow auth
-http_access allow localhost
-http_access deny all
-
-cache deny all
-
-forwarded_for delete
-request_header_access Via deny all
+auth_param basic program /usr/lib/squid3/basic_ncsa_auth /etc/squid3/passwd
+auth_param basic realm proxy
+acl authenticated proxy_auth REQUIRED
+http_access allow authenticated
